<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uselesssolutions.morse_app_us.ThirdLook"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#e69536cc"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#ffffff"/>

    <TextView
        android:id="@+id/morseCode"
        android:layout_width="0dp"
        android:layout_height="181dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/longButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shortButton"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:text="."
        android:textSize="36sp"
        android:textStyle="bold"
        android:background="#6a1a98"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/wordSpaceBtn"
        app:layout_constraintEnd_toStartOf="@+id/longButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/longButton"
        android:layout_width="162dp"
        android:layout_height="72dp"
        android:background="#6a1a98"
        android:text="_"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/letterSpaceBtn"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton" />

    <Button
        android:id="@+id/wordSpaceBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="Word space"
        android:background="#6a1a98"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        app:layout_constraintEnd_toStartOf="@+id/letterSpaceBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/letterSpaceBtn"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:text="Letter space"
        android:background="#6a1a98"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="324dp"
        android:layout_height="91dp"
        android:background="#6a1a98"
        android:text="Translate"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="221dp"
        android:background="#6a1a98"
        android:text="Delete"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>