<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/audio" android:title="Audio playback"
        app:showAsAction="always"/>

    <item android:id="@+id/dictionary"
        android:title="dictionary"
        android:icon="@mipmap/translate"
        app:showAsAction="always" />

    <!--<item android:id="@+id/backArrow"
        android:title="backArrow"
        android:icon="@mipmap/play"
        app:showAsAction="always" />-->
</menu>